# presley

./: Makefile  README.md  presley.cabal
app/: Main.hs  stdlib.elv
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
std/: base.pre  inout.pre  set.pre  stdlib.pre  unix.pre
std/docs/: inout.org  unix.org
