cabal-version:      2.4
name:               Presley
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: a programming language

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             omnit3a

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable presley
    ghc-options:
        -fglasgow-exts
    main-is:          Main.hs
    
    build-depends:    base ^>=4.15.1.0, parsec, mtl, array, directory
    hs-source-dirs:   app
    default-language: Haskell2010
